library @ v2.8.17 since apparently .13 is broken

--- a/site/notebooks/code_samples/model_validation/validate_application_scorecard.ipynb
+++ b/site/notebooks/code_samples/model_validation/validate_application_scorecard.ipynb
@@ -1428,7 +1428,7 @@
     "\n",
     "## Run feature importance tests\n",
     "\n",
-    "We also want to verify the relative influence of different input features on our models' predictions, as well as inspect the differences between our champion and challenger model to see if a certain model offers more understandable or logical importance scores for features.\n",
+    "We want to verify the relative influence of different input features on our models' predictions, as well as inspect the differences between our champion and challenger model to see if a certain model offers more understandable or logical importance scores for features.\n",
     "\n",
     "Use `list_tests()` to identify all the feature importance tests for classification:"
    ]
@@ -1580,7 +1580,7 @@
     "\n",
     "Our final task is to verify that all the tests provided by the model development team were run and reported accurately. Note the appended `result_ids` to delineate which dataset we ran the test with for the relevant tests.\n",
     "\n",
-    "Here, we'll specify all the tests we'd like to independently rerun in a dictionary called `test_config`. **Note here that `inputs` and `input_grid` expect the `input_id` of the dataset or model as the value rather than the variable name we specified**:"
+    "Here, we'll specify all the tests we'd like to independently rerun in a dictionary called `test_config`:"
    ]
   },
   {
@@ -1816,14 +1816,8 @@
   }
  ],
  "metadata": {
-  "kernelspec": {
-   "display_name": "ValidMind Library",
-   "language": "python",
-   "name": "validmind"
-  },
   "language_info": {
-   "name": "python",
-   "version": "3.10.13"
+   "name": "python"
   }
  },
  "nbformat": 4,
