--- a/site/validmind/validmind.qmd
+++ b/site/validmind/validmind.qmd
@@ -1,5 +1,5 @@
 ---
-title: "ValidMind Library Python API"
+title: "ValidMind Library"
 aliases:
   - index.html
 sidebar: validmind-reference
@@ -44,7 +44,7 @@ After you have pasted the code snippet into your development source code and exe
 
 ::: {.signature}
 
-<span class="name">2.8.12</span>
+<span class="name">2.8.17</span>
 
 :::
 
@@ -66,7 +66,7 @@ If the API key and secret are not provided, the client will attempt to retrieve 
 
 **Arguments**
 
-- `project (str, optional)`: The project CUID. Alias for model. Defaults to None. [DEPRECATED]
+- `project (str, optional)`: The project CUID. Alias for model. Defaults to None. \[DEPRECATED\]
 - `model (str, optional)`: The model CUID. Defaults to None.
 - `api_key (str, optional)`: The API key. Defaults to None.
 - `api_secret (str, optional)`: The API secret. Defaults to None.
@@ -225,11 +225,11 @@ Unit metrics are key-value pairs where the key is the metric name and the value 
 **Arguments**
 
 - `key (str)`: The metric key
-- `value (float)`: The metric value
-- `inputs (list)`: A list of input IDs that were used to compute the metric.
-- `params (dict)`: Dictionary of parameters used to compute the metric.
-- `recorded_at (str)`: The timestamp of the metric. Server will use current time if not provided.
-- `thresholds (dict)`: Dictionary of thresholds for the metric.
+- `value (Union[int, float])`: The metric value
+- `inputs (List[str])`: List of input IDs
+- `params (Dict[str, Any])`: Parameters used to generate the metric
+- `recorded_at (str)`: Timestamp when the metric was recorded
+- `thresholds (Dict[str, Any])`: Thresholds for the metric
 
 ## preview_template<span class="suffix"></span>
 
@@ -420,6 +420,35 @@ The function may also include a docstring. This docstring will be used and logge
 **Returns**
 
 - The decorated function.
+
+## log_text<span class="suffix"></span>
+
+<!-- signatures.jinja2 -->
+
+::: {.signature}
+
+<span class="kw">def</span><span class="name">log_text</span>(<span class="params"><span class="n">content_id</span><span class="p">:</span><span class="nb">str</span><span class="muted">,</span></span><span class="params"><span class="n">text</span><span class="p">:</span><span class="nb">str</span><span class="muted">,</span></span><span class="params"><span class="n">\_json</span><span class="p">:</span><span class="n">Optional</span><span class="p">\[</span><span class="n">Dict</span><span class="p">\[</span><span class="nb">str</span><span class="p">, </span><span class="n">Any</span><span class="p">\]</span><span class="p">\]</span><span class="o">=</span><span class="kc">None</span></span>)<span class="p"> → </span><span class="return-annotation"><span class="n">Dict</span><span class="p">\[</span><span class="nb">str</span><span class="p">, </span><span class="n">Any</span><span class="p">\]</span></span>:
+
+:::
+
+<!-- docstring.jinja2 -->
+
+Logs free-form text to ValidMind API.
+
+**Arguments**
+
+- `content_id (str)`: Unique content identifier for the text.
+- `text (str)`: The text to log. Will be converted to HTML with MathML support.
+- `_json (dict, optional)`: Additional metadata to associate with the text. Defaults to None.
+
+**Returns**
+
+- An accordion widget containing the logged text as HTML.
+
+**Raises**
+
+- `ValueError`: If content_id or text are empty or not strings.
+- `Exception`: If the API call fails.
 
 <!-- module.qmd.jinja2 -->
 
