--- a/site/validmind/validmind/tests/data_validation/DescriptiveStatistics.qmd
+++ b/site/validmind/validmind/tests/data_validation/DescriptiveStatistics.qmd
@@ -14,7 +14,7 @@ toc-expand: 4
 
 ::: {.signature}
 
-<span class="decorators"><span class="decorator">@<span class="n">tags(<span class="s">'tabular_data'</span>, <span class="s">'time_series_data'</span>)</span></span>
+<span class="decorators"><span class="decorator">@<span class="n">tags(<span class="s">'tabular_data'</span>, <span class="s">'time_series_data'</span>, <span class="s">'data_quality'</span>)</span></span>
 
 <span class="decorator">@<span class="n">tasks(<span class="s">'classification'</span>, <span class="s">'regression'</span>)</span></span> </span>
 
