Reverting notebooks to main & hacking API version

--- a/site/releases/2025/2025-apr-08/release-notes.qmd
+++ b/site/releases/2025/2025-apr-08/release-notes.qmd
@@ -157,11 +157,11 @@ You can now customize the display of test results when inserted as test-driven b
 
 You can now toggle the display of the following attributes:
 
-- `hideTitle`
-- `hideText`
-- `hideParams`
-- `hideTables`
-- `hideFigures`
+- `hideTitle`: Title
+- `hideText`: Description
+- `hideParams`: Parameters
+- `hideTables`: Tables
+- `hideFigures`: Figures
 
 For example, to show figures but hide tables:
 
