--- a/site/releases/2025/2025-apr-08/release-notes.qmd
+++ b/site/releases/2025/2025-apr-08/release-notes.qmd
@@ -13,7 +13,7 @@ listing:
       description: "Learn how to use {{< var vm.product >}} for your end-to-end model documentation process based on common model development scenarios with our series of four introductory notebooks."
 ---
 
-DON'T FORGET THE SUMMARY!
+We've released the ability to manage model stakeholder types within the {{< var validmind.platform >}}, support for custom configuration of test-driven blocks via the {{< var validmind.developer >}}, an updated {{< var vm.api >}} reference within our documentation, and more.
 
 ::: {.highlights}
 
@@ -86,7 +86,7 @@ We've introduced the ability to define custom model stakeholder types, allowing 
 ::::
 
 - Model stakeholders determine specific responsibilities and access levels for model review and approval processes for each model in your model inventory, such as read or edit access to model inventory fields.
-- Each model stakeholder also belongs to user groups* which determine which models they can see, and have user roles* with attached role permissions* which define the level of access they have to overarching {{< var validmind.platform >}} features.
+- Each model stakeholder also belongs to user groups[^1] which determine which models they can see, and have user roles[^2] with attached role permissions[^3] which define the level of access they have to overarching {{< var validmind.platform >}} features.
 
 ::: {.callout}
 Model stakeholders are now also available as a field defined in conditional arguments within model workflow steps*.
@@ -125,10 +125,7 @@ We've completely redesigned our {{< var validmind.api >}} reference using the sa
 
 :::
 
-
 :::
-
-
 
 ## Enhancements
 
@@ -155,6 +152,9 @@ You can now customize the display of test results when inserted as test-driven b
 
 ::::
 
+:::: {.flex .flex-wrap .justify-around}
+
+::: {.w-30-ns}
 You can now toggle the display of the following attributes:
 
 - `hideTitle`: Title
@@ -163,6 +163,9 @@ You can now toggle the display of the following attributes:
 - `hideTables`: Tables
 - `hideFigures`: Figures
 
+:::
+
+::: {.w-70-ns}
 For example, to show figures but hide tables:
 
 ```python
@@ -174,6 +177,10 @@ test = vm.tests.run_test(
 )
 test.log(config={"hideFigures": False, "hideTables": True})
 ```
+
+:::
+
+::::
 
 <!-- COVERED BY MODEL STAKEHOLDER RELEASE ABOVE  -->
 
@@ -196,7 +203,6 @@ The ApprovalNode component updates conditions to check against FIELD_IDENTIFIERS
 
 Finally, in the useQueryBuilder hook, FIELD_IDENTIFIERS are exported for consistent usage across components, with query fields adjusted to reflect new role identifier mappings. These changes enhance code maintainability by reducing hardcoded values and ensuring consistency in role-based operations across the system. -->
 
-
 ## Bug fixes
 
 ### {{< var validmind.platform >}} (v1.31.10)
@@ -208,7 +214,7 @@ Labels: bug
 --->
 #### Improved table of contents navigation for model documentation
 
-Previously, users experienced non-optimal behavior with the table of contents sidebar for their model's **{{< fa book-open >}} Documentation** pages, such as being unable to scroll to reveal additional headings when the sections of the Document Outline* exceeded the length of the visible page, and navigation that auto-collapsed counterintuitively.
+Previously, users experienced non-optimal behavior with the table of contents sidebar for their model's **{{< fa book-open >}} Documentation** pages,[^5] such as being unable to scroll to reveal additional headings when the sections of the Document Outline exceeded the length of the visible page, and navigation that auto-collapsed counterintuitively.
 
 Now, users can scroll to reveal previously hidden table of contents headings via a fixed navigation sidebar.
 
@@ -221,8 +227,7 @@ Labels: bug
 
 Previously, when test results logged to the {{< var validmind.platform >}} contained more than 20 pages of data in a table were inserted as test-driven blocks into documentation, the previous and next buttons did not render correctly for pagination.
 
-Now, test results logged and inserted as test-driven blocks* into the documentation display pagination navigation buttons correctly regardless of the size of the data table.
-
+Now, test results logged and inserted as test-driven blocks[^6] into the documentation display pagination navigation buttons correctly regardless of the size of the data table.
 
 <!-- Customer-managed ValidMind ONLY -->
 
@@ -261,5 +266,19 @@ A sample Kubernetes manifest, `validmind-docs.yaml`, is included to facilitate d
 
 These changes offer enhanced flexibility in deploying the documentation site across different environments by enabling dynamic configuration of URLs based on deployment settings. -->
 
-
 {{< include /releases/_how-to-upgrade.qmd >}}
+
+
+<!-- FOOTNOTES -->
+
+[^1]: [Manage groups](/guide/configuration/manage-groups.qmd)
+
+[^2]: [Manage roles](/guide/configuration/manage-roles.qmd)
+
+[^3]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
+
+[^4]: [Set up model workflows](/guide/model-workflows/set-up-model-workflows.qmd)
+
+[^5]: [Working with model documentation](/guide/model-documentation/working-with-model-documentation.qmd)
+
+[^6]: [Work with test results](/guide/model-documentation/work-with-test-results.qmd)
