--- a/site/releases/2025/2025-apr-24/release-notes.qmd
+++ b/site/releases/2025/2025-apr-24/release-notes.qmd
@@ -1,6 +1,6 @@
 ---
-title: "April 8, 2025"
-date: 2025-04-08
+title: "April 24, 2025"
+date: 2025-04-24
 subtitle: "Unified version `23.03.05`"
 listing:
   - id: development-series
@@ -89,7 +89,7 @@ We've introduced the ability to define custom model stakeholder types, allowing 
 - Each model stakeholder also belongs to user groups[^1] which determine which models they can see, and have user roles[^2] with attached role permissions[^3] which define the level of access they have to overarching {{< var validmind.platform >}} features.
 
 ::: {.callout}
-Model stakeholders are now also available as a field defined in conditional arguments within model workflow steps*.
+Model stakeholders are now also available as a field defined in conditional arguments within model workflow steps.[^4]
 
 :::
 
