Adjusting categories for listing filter

--- a/internal/templates/yearly-releases.qmd
+++ b/internal/templates/yearly-releases.qmd
@@ -2,7 +2,7 @@
 # TITLE-MARKER
 title: "0000 Releases"
 date: last-modified
-categories: [releases-by-year]
+categories: ["releases by year"]
 # REMOVE THIS `FALSE` FLAG AFTER YEARLY RELEASES HAVE ALL BEEN GATHERED ONTO THIS LANDING
 search: false
 listing:
