--- a/site/releases/2024/2024-releases.qmd
+++ b/site/releases/2024/2024-releases.qmd
@@ -2,7 +2,7 @@
 # TITLE-MARKER
 title: "2024 Releases"
 date: last-modified
-categories: [releases-by-year]
+categories: ["releases by year"]
 listing:
 # LISTING-MARKER
   - id: 2024-releases
