--- a/site/releases/all-releases.qmd
+++ b/site/releases/all-releases.qmd
@@ -5,7 +5,7 @@ date: last-modified
 listing:
   - id: releases
     type: table
-    page-size: 10
+    page-size: 20
     table-hover: true
     max-description-length: 250
     sort: "date desc"
@@ -18,7 +18,7 @@ listing:
       subtitle: "{{< var vm.product >}} version"
       description: "Summary"
     exclude:
-        categories: [breaking-changes,deprecations,releases-by-year]
+        categories: ["breaking changes", "deprecations", "releases by year"]
     contents:
         - ../releases/**/**/*.qmd
         - ../releases/**/*.qmd
