--- a/site/releases/2023/2023-releases.qmd
+++ b/site/releases/2023/2023-releases.qmd
@@ -1,7 +1,7 @@
 ---
 title: "2023 Releases"
 date: last-modified
-categories: [releases-by-year]
+categories: ["releases by year"]
 listing:
   - id: 2023-releases
     type: grid
