Moving FAQ categories to their actual pages

--- a/site/faq/faq-reporting.qmd
+++ b/site/faq/faq-reporting.qmd
@@ -12,6 +12,7 @@ listing:
     - ../guide/model-documentation/export-documentation.qmd
     - ../guide/reporting/working-with-analytics.qmd
     - ../guide/monitoring/ongoing-monitoring.qmd
+categories: ["exports", "analytics", "reports", "ongoing monitoring", "validmind platform"]
 ---
 
 {{< include _faq-exporting.qmd >}}
