--- a/site/faq/faq-collaboration.qmd
+++ b/site/faq/faq-collaboration.qmd
@@ -14,6 +14,7 @@ listing:
     - ../guide/model-inventory/view-model-activity.qmd
     - ../guide/model-documentation/collaborate-with-others.qmd
     - ../guide/model-workflows/working-with-model-workflows.qmd
+categories: ["real-time collaboration", "model documentation", "model activity", "auditing", "workflows", "model lifecycle", "validmind platform"]
 ---
 
 {{< include _faq-activity.qmd >}}
