--- a/site/faq/faq-integrations.qmd
+++ b/site/faq/faq-integrations.qmd
@@ -14,6 +14,7 @@ listing:
     - ../developer/supported-models.qmd
     - ../about/overview-llm-features.qmd
     - ../about/deployment/deployment-options.qmd
+categories: ["supported libraries", "supported languages", "integrations", "images", "large language models", "explainability", "deployment options", "validmind library"]
 ---
 
 ## Which languages, libraries, and environments do you support?
