--- a/site/faq/faq-inventory.qmd
+++ b/site/faq/faq-inventory.qmd
@@ -14,6 +14,7 @@ listing:
     - ../guide/model-inventory/view-model-activity.qmd
     - ../guide/model-inventory/working-with-model-inventory.qmd
     - ../guide/model-inventory/managing-model-inventory.qmd
+categories: ["model activity", "model registration", "model inventory", "customization", "model stages", "model interdependencies", "auditing", "exports", "validmind platform"]
 ---
 
 {{< include _faq-activity.qmd >}}
