--- a/site/faq/faq-organizations.qmd
+++ b/site/faq/faq-organizations.qmd
@@ -11,6 +11,7 @@ listing:
     - ../guide/configuration/accessing-validmind.qmd
     - ../guide/configuration/managing-your-organization.qmd
     - ../guide/configuration/managing-users.qmd
+categories: ["access", "permissions", "organizations", "user registration", "validmind platform"]
 ---
 
 ## How do I get access to {{< var vm.product >}}?
