--- a/site/faq/faq-privacy.qmd
+++ b/site/faq/faq-privacy.qmd
@@ -16,6 +16,7 @@ listing:
     - ../about/deployment/deployment-options.qmd
     - ../about/fine-print/data-privacy-policy.qmd
     - ../guide/model-inventory/view-model-activity.qmd
+categories: ["data handling", "privacy", "confidentiality", "model activity", "auditing", "validmind platform", "validmind library"]
 ---
 
 ## How does {{< var vm.product >}} handle the processing of PII?
