--- a/site/faq/faq-testing.qmd
+++ b/site/faq/faq-testing.qmd
@@ -14,6 +14,7 @@ listing:
     - ../developer/model-testing/testing-overview.qmd
     - ../developer/model-testing/test-descriptions.qmd
     - ../guide/monitoring/ongoing-monitoring.qmd
+categories: ["testing", "model documentation", "customization", "custom data", "explainability", "ongoing monitoring", "validmind library"]
 ---
 
 ## How do the out-of-the-box tests developed by {{< var vm.product >}} work?
