--- a/site/faq/faq-validation.qmd
+++ b/site/faq/faq-validation.qmd
@@ -14,6 +14,7 @@ listing:
     - ../guide/model-validation/manage-validation-guidelines.qmd
     - ../guide/model-validation/preparing-validation-reports.qmd
     - ../guide/model-validation/working-with-model-findings.qmd
+categories: ["model validation", "validation guidelines", "model findings", "model documentation", "templates", "compliance", "validmind platform"]
 ---
 
 ## Can I set up custom validation guidelines for use in templates?
