--- a/site/faq/faq-workflows.qmd
+++ b/site/faq/faq-workflows.qmd
@@ -14,6 +14,7 @@ listing:
     - ../guide/model-workflows/working-with-model-workflows.qmd
     - ../guide/model-workflows/customize-model-lifecycle-statuses.qmd
     - ../guide/model-inventory/manage-model-inventory-fields.qmd
+categories: ["workflows", "model lifecycle", "lifecycle statuses", "validmind platform", "validmind library"]
 ---
 
 ## Can I customize workflows within {{< var vm.product >}}?
