Update topic intro to mention ongoing monitoring docs

--- a/site/guide/model-documentation/export-documentation.qmd
+++ b/site/guide/model-documentation/export-documentation.qmd
@@ -5,7 +5,7 @@ aliases:
   - /guide/export-documentation.html
 ---
 
-Export your model documentation or validation reports as Microsoft Word files (`.docx`) for use outside of the {{< var validmind.platform >}}.
+Export your model documentation, validation reports, and ongoing monitoring documentation as Microsoft Word files (`.docx`) for use outside of the {{< var validmind.platform >}}.
 
 ::: {.callout}
 {{< var vm.product >}} supports Word 365, Word 2019, Word 2016, and Word 2013.
