Improve fine print content

--- a/site/about/fine-print/data-privacy-policy.qmd
+++ b/site/about/fine-print/data-privacy-policy.qmd
@@ -2,6 +2,15 @@
 title: "Data privacy policy"
 keywords: "data privacy, ai risk, model risk management, {{< var vm.product >}}"
 date: last-modified
+listing:
+  id: legal-ease
+  type: grid
+  grid-columns: 2
+  contents:
+    - path: https://validmind.com/about/legal/
+      title: "Legal Ease"
+      description: "These documents detail our practices in data handling, privacy, AI usage policy, terms of service, and more."
+      author: validmind.com
 aliases:
   - /about/data-privacy-policy.html
   - /guide/data-privacy-policy.html
@@ -54,6 +63,10 @@ When you generate documentation or run tests, {{< var vm.product >}} imports the
 
 The {{< var validmind.developer >}} does not send any personally identifiable information (PII) through our {{< var validmind.api >}}. 
 
-<!-- ## What's next
+## A commitment to transparency
 
-- [Configure AWS PrivateLink](/guide/configuration/configure-aws-privatelink.qmd) -->
+Understanding our policies shouldn’t feel like deciphering code, so we’ve made our legal texts as clear and accessible as possible: 
+
+::: {#legal-ease}
+:::
+
