--- a/site/about/fine-print/license-agreement.qmd
+++ b/site/about/fine-print/license-agreement.qmd
@@ -40,4 +40,4 @@ By installing, copying, or otherwise using the Software, you as a user of the So
 
 By installing or using the Software, you acknowledge that you have read this Agreement, understand it, and agree to be bound by its terms and conditions.
 
-Copyright © 2023 {{< var validmind.legal >}}  All rights reserved.
+Copyright © {{< now year >}} {{< var validmind.legal >}}  All rights reserved.
