Adding Emma's suggestion

--- a/site/releases/2025/2025-apr-24/release-notes.qmd
+++ b/site/releases/2025/2025-apr-24/release-notes.qmd
@@ -225,7 +225,7 @@ Labels: bug
 --->
 #### Fixed data table navigation in large test-driven blocks
 
-Previously, when test results logged to the {{< var validmind.platform >}} contained more than 20 pages of data in a table were inserted as test-driven blocks into documentation, the previous and next buttons did not render correctly for pagination.
+Previously, when test results logged to the {{< var validmind.platform >}} contained more than 20 pages of data in a table, the previous and next buttons did not render correctly for pagination when added as test-driven blocks into documentation.
 
 Now, test results logged and inserted as test-driven blocks[^6] into the documentation display pagination navigation buttons correctly regardless of the size of the data table.
 
