Missed some footnotes

--- a/site/releases/2025/2025-apr-24/release-notes.qmd
+++ b/site/releases/2025/2025-apr-24/release-notes.qmd
@@ -136,7 +136,7 @@ PR #337: [SC 8805] support config option for logging test results
 URL: https://github.com/validmind/validmind-library/pull/337
 Labels: documentation, enhancement
 --->
-#### Support for display configuration of test-driven blocks
+#### Support for display configuration of test-driven blocks[^5]
 
 :::: {.flex .flex-wrap .justify-around}
 
@@ -214,7 +214,7 @@ Labels: bug
 --->
 #### Improved table of contents navigation for model documentation
 
-Previously, users experienced non-optimal behavior with the table of contents sidebar for their model's **{{< fa book-open >}} Documentation** pages,[^5] such as being unable to scroll to reveal additional headings when the sections of the Document Outline exceeded the length of the visible page, and navigation that auto-collapsed counterintuitively.
+Previously, users experienced non-optimal behavior with the table of contents sidebar for their model's **{{< fa book-open >}} Documentation** pages,[^6] such as being unable to scroll to reveal additional headings when the sections of the Document Outline exceeded the length of the visible page, and navigation that auto-collapsed counterintuitively.
 
 Now, users can scroll to reveal previously hidden table of contents headings via a fixed navigation sidebar.
 
@@ -225,9 +225,9 @@ Labels: bug
 --->
 #### Fixed data table navigation in large test-driven blocks
 
-Previously, when test results logged to the {{< var validmind.platform >}} contained more than 20 pages of data in a table, the previous and next buttons did not render correctly for pagination when added as test-driven blocks into documentation.
+Previously, when test results logged to the {{< var validmind.platform >}} contained more than 20 pages of data in a table, the previous and next buttons did not render correctly for pagination when added as test-driven blocks[^7] into documentation.
 
-Now, test results logged and inserted as test-driven blocks[^6] into the documentation display pagination navigation buttons correctly regardless of the size of the data table.
+Now, test results logged and inserted as test-driven blocks into the documentation display pagination navigation buttons correctly regardless of the size of the data table.
 
 <!-- Customer-managed ValidMind ONLY -->
 
@@ -279,6 +279,8 @@ These changes offer enhanced flexibility in deploying the documentation site acr
 
 [^4]: [Set up model workflows](/guide/model-workflows/set-up-model-workflows.qmd)
 
-[^5]: [Working with model documentation](/guide/model-documentation/working-with-model-documentation.qmd)
+[^5]: [Work with test results](/guide/model-documentation/work-with-test-results.qmd)
 
-[^6]: [Work with test results](/guide/model-documentation/work-with-test-results.qmd)
+[^6]: [Working with model documentation](/guide/model-documentation/working-with-model-documentation.qmd)
+
+[^7]: [Work with test results](/guide/model-documentation/work-with-test-results.qmd)
