--- a/internal/templates/yearly-releases.qmd
+++ b/internal/templates/yearly-releases.qmd
@@ -2,6 +2,7 @@
 # TITLE-MARKER
 title: "0000 Releases"
 date: last-modified
+categories: ["releases by year"]
 # REMOVE THIS `FALSE` FLAG AFTER YEARLY RELEASES HAVE ALL BEEN GATHERED ONTO THIS LANDING
 search: false
 listing:
@@ -9,10 +10,10 @@ listing:
   - id: 0000-releases
     type: grid
     max-description-length: 250
-    sort: false
-    fields: [title, description]
+    sort: "date desc"
+    fields: [title, subtitle, description]
     contents:
-# RELEASE-FILES-MARKER
+        - ./**/**.qmd
 ---
 
 <!-- EMBED-MARKER -->
