--- a/release-scripts/generate-release-notes.ipynb
+++ b/release-scripts/generate-release-notes.ipynb
@@ -30,6 +30,7 @@
     "  - [Create categories from labels](#toc2_3_)    \n",
     "  - [Collect GitHub URLs](#toc2_4_)    \n",
     "  - [Set the release date](#toc2_5_)    \n",
+    "  - [Define the unified version](#toc2_6_)   \n",
     "- [Extracting PR information](#toc3_)    \n",
     "  - [Create release folder and file](#toc3_1_)    \n",
     "  - [Add the date to release notes ](#toc3_2_)    \n",
@@ -209,6 +210,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='toc2_6_'></a>\n",
+    "\n",
+    "### Define the unified version\n",
+    "\n",
+    "This cell will prompt you to enter the unified ValidMind version here associated with the release in accordance with our [customer-managed release versioning conventions](https://github.com/validmind/installation/blob/main/site/installation/Customer-managed-releases.qmd), for example `25.03.06`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "unified_version = f\"Unified version `{gro.input_version()}`\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<a id='toc3_'></a>\n",
     "\n",
     "## Extracting PR information "
@@ -243,7 +264,7 @@
     "<a id='toc3_2_'></a>\n",
     "\n",
     "### Add the date to release notes \n",
-    "This block writes the specified date as the title of the new release notes file.\n",
+    "This block writes the specified date as the title (for display) and date (for listing sorting) of the new release notes file.\n",
     "\n",
     "**It will also open up the newly created `release-notes.qmd` file for you so you don't have to go looking for it.**"
    ]
@@ -254,7 +275,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gro.create_release_qmd(output_file, gro.original_release_date)"
+    "gro.create_release_qmd(output_file, gro.original_release_date, gro.release_datetime.strftime(\"%Y-%m-%d\"), unified_version)"
    ]
   },
   {
@@ -558,7 +579,7 @@
     "<a id='toc5_2_'></a>\n",
     "\n",
     "### Update sidebar \n",
-    "This block will go into our `_quarto.yml` file and add the new release notes so it shows up on the sidebar of the docsite under the \"About\" section. "
+    "This block will go into our releases `_sidebar.yaml` file and add the new release notes so it shows up on the sidenav of the docsite under the \"Releases\" section. "
    ]
   },
   {
@@ -567,7 +588,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gro.update_quarto_yaml(gro.release_datetime, year)"
+    "gro.update_release_sidebar(gro.release_datetime, year)"
    ]
   },
   {
