--- a/release-scripts/year-end-cleanup.ipynb
+++ b/release-scripts/year-end-cleanup.ipynb
@@ -32,8 +32,6 @@
     "  - [Retrieve the yearly folder](#toc3_1_)    \n",
     "  - [Create yearly listing page](#toc3_2_)    \n",
     "  - [Edit the yearly listing page](#toc3_3_)    \n",
-    "  - [Retrieve yearly release pages](#toc3_4_)    \n",
-    "  - [Add releases to yearly listing page](#toc3_5_)    \n",
     "- [Updating sidebar and links](#toc4_)    \n",
     "  - [Add yearly release folder to sidebar](#toc4_1_)    \n",
     "  - [Move year end marker](#toc4_2_)     \n",
@@ -225,47 +223,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc3_4_'></a>\n",
-    "\n",
-    "### Retrieve yearly release pages\n",
-    "\n",
-    "This cell returns the `release-notes.qmd` filepaths for all the release folders in our matching yearly subdirectory."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "release_listings = yc.get_release_listings(yearly_path)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id='toc3_5_'></a>\n",
-    "\n",
-    "### Add releases to yearly listing page \n",
-    "\n",
-    "Next, we'll insert that year's release pages into the listing for the yearly roundup page sorted by the release dates in descending order (newest first)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if release_listings:\n",
-    "    yc.update_listing(yearly_release, release_listings)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "<a id='toc4_'></a>\n",
     "\n",
     "## Updating sidebar and links "
@@ -279,7 +236,7 @@
     "\n",
     "### Add yearly release folder to sidebar \n",
     "\n",
-    "Now that we've created the yearly listing page, we need to update the sidebar in `_quarto.yml` to accomodate.\n",
+    "Now that we've created the yearly listing page, we need to update the releases `_sidebar.yaml` to accomodate.\n",
     "\n",
     "**This cell takes all the release filepaths matching our year and shoves them into a `contents:` accordion menu with the new `{year}-.releases.qmd` listing page as the landing page.** \n"
    ]
@@ -290,7 +247,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "yc.update_quarto_yaml(year)"
+    "yc.update_release_sidebar(year)"
    ]
   },
   {
