--- a/site/guide/configuration/_manage-roles.qmd
+++ b/site/guide/configuration/_manage-roles.qmd
@@ -5,20 +5,20 @@
 
 1. Enter the unique **[name]{.smallcaps}** and **[description]{.smallcaps}** for the role.^[Role names and model stakeholder type names cannot be duplicated to reduce confusion.]
 
-1. Once you click **{{< fa plus >}} Add Role**, you can proceed with managing the permissions and users associated with that role.
+1. Once you click **{{< fa plus >}} Add Role**, you can proceed with managing the user permissions and users associated with that role.
 
 #### Manage role permissions
 
-1. Click on the role whose permissions you want to change.
+1. Click on the role whose user permissions you want to change.
 
 1. Select the **Permissions** tab, where you can: 
 
-      - View the current permissions assigned to that role.
-      - Select permissions to be assigned to that role.
+      - View the current user permissions assigned to that role.
+      - Select user permissions to be assigned to that role.
 
-1. Select **Edit Permissions** to to add or remove permissions to or from that role. 
+1. Select **Edit Permissions** to to add or remove user permissions to or from that role. 
 
-1. Toggle specific permissions for that role by checking or unchecking the boxes next to the permission. 
+1. Toggle specific user permissions for that role by checking or unchecking the boxes next to the permission. 
 
 1. Click **Save Permissions** to apply your changes. 
 
@@ -54,20 +54,20 @@
 
 1. Enter the unique **[name]{.smallcaps}** and **[description]{.smallcaps}** for the role.
 
-1. Once you click **{{< fa plus >}} Add Role**, you can proceed with managing the permissions and users associated with that role.
+1. Once you click **{{< fa plus >}} Add Role**, you can proceed with managing the user permissions and users associated with that role.
 
 #### Manage role permissions
 
-1. Click on the role whose permissions you want to change.
+1. Click on the role whose user permissions you want to change.
 
 1. Select the **Permissions** tab, where you can: 
 
-      - View the current permissions assigned to that role.
-      - Select permissions to be assigned to that role.
+      - View the current user permissions assigned to that role.
+      - Select user permissions to be assigned to that role.
 
-1. Select **Edit Permissions** to to add or remove permissions to or from that role. 
+1. Select **Edit Permissions** to to add or remove user permissions to or from that role. 
 
-1. Toggle specific permissions for that role by checking or unchecking the boxes next to the permission. 
+1. Toggle specific user permissions for that role by checking or unchecking the boxes next to the permission. 
 
 1. Click **Save Permissions** to apply your changes. 
 
