--- a/site/releases/2024/2024-releases.qmd
+++ b/site/releases/2024/2024-releases.qmd
@@ -2,30 +2,16 @@
 # TITLE-MARKER
 title: "2024 Releases"
 date: last-modified
-# REMOVE THIS `FALSE` FLAG AFTER YEARLY RELEASES HAVE ALL BEEN GATHERED ONTO THIS LANDING
-search: false
+categories: ["releases by year"]
 listing:
 # LISTING-MARKER
   - id: 2024-releases
     type: grid
     max-description-length: 250
-    sort: false
-    fields: [title, description]
+    sort: "date desc"
+    fields: [title, subtitle, description]
     contents:
-# RELEASE-FILES-MARKER
-        - 2024-dec-24/release-notes.qmd
-        - 2024-dec-06/release-notes.qmd
-        - 2024-oct-22/release-notes.qmd
-        - 2024-sep-25/release-notes.qmd
-        - 2024-sep-09/release-notes.qmd
-        - 2024-aug-13/release-notes.qmd
-        - 2024-jul-22/release-notes.qmd
-        - 2024-jun-10/release-notes.qmd
-        - 2024-may-22/release-notes.qmd
-        - 2024-mar-27/release-notes.qmd
-        - 2024-feb-14/release-notes.qmd
-        - 2024-jan-26/release-notes.qmd
-        - 2024-jan-18/release-notes.qmd
+        - ./**/**.qmd
 ---
 
 <!-- EMBED-MARKER -->
