--- a/site/validmind/validmind.qmd
+++ b/site/validmind/validmind.qmd
@@ -1,5 +1,5 @@
 ---
-title: "ValidMind Library Python API"
+title: "ValidMind Library"
 aliases:
   - index.html
 sidebar: validmind-reference
@@ -44,7 +44,7 @@ After you have pasted the code snippet into your development source code and exe
 
 ::: {.signature}
 
-<span class="name">2.8.18</span>
+<span class="name">2.8.13</span>
 
 :::
 
