--- a/site/index.qmd
+++ b/site/index.qmd
@@ -43,15 +43,12 @@ listing:
     grid-columns: 3
     max-description-length: 150
     sort: false
-    fields: [title, description]
+    fields: [title, subtitle, description]
     contents:
     # MAKE-RELEASE-NOTES-LATEST-MARKER
+      - /releases/2025/2025-apr-24/release-notes.qmd
       - /releases/2025/2025-mar-07/release-notes.qmd
       - /releases/2025/2025-jan-31/release-notes.qmd
-      - /releases/2024/2024-dec-24/release-notes.qmd
-      - /releases/2024/2024-dec-06/release-notes.qmd
-      - /releases/2024/2024-oct-22/release-notes.qmd
-      - /releases/2024/2024-sep-25/release-notes.qmd
     # MAKE-RELEASE-NOTES-OLDEST-MARKER
   - id: validmind-academy
     type: grid
@@ -375,11 +372,28 @@ Gain insights through our original content on model risk management.
 <!-- FILLER COLUMN DO NOT REMOVE -->
 :::
 
-::: {.w-80-ns .mb4}
+::: {.w-70-ns .mb4}
+
+:::: {.flex .flex-wrap .justify-around}
+
+::: {.w-70-ns}
 
 :::: {.f2}
 Latest Releases
-:::: 
+
+::::
+
+:::
+
+::: {.w-30-ns .tr}
+:::: {.f4}
+[[all releases {{< fa chevron-right >}} ](releases/all-releases.qmd)]{.smallcaps}
+
+:::
+
+:::
+
+::::
 
 :::{#releases}
 :::
