--- a/site/releases/2023/2023-releases.qmd
+++ b/site/releases/2023/2023-releases.qmd
@@ -1,21 +1,15 @@
 ---
 title: "2023 Releases"
 date: last-modified
+categories: ["releases by year"]
 listing:
   - id: 2023-releases
     type: grid
     max-description-length: 250
-    sort: false
-    fields: [title, description]
+    sort: "date desc"
+    fields: [title, subtitle, description]
     contents:
-        - 2023-dec-13/highlights.qmd
-        - 2023-nov-09/highlights.qmd
-        - 2023-oct-25/highlights.qmd
-        - 2023-sep-27/highlights.qmd
-        - 2023-aug-15/highlights.qmd
-        - release-notes-2023-jul-24.qmd
-        - release-notes-2023-jun-22.qmd
-        - release-notes-2023-may-30.qmd
+        - ./**/**.qmd
 ---
 
 :::{#2023-releases}
