--- a/site/releases/breaking-changes/breaking-changes.qmd
+++ b/site/releases/breaking-changes/breaking-changes.qmd
@@ -4,6 +4,7 @@ date: last-modified
 # DON'T DISPLAY THE SOURCE CODE FOR THE TABLES ON THE PAGE
 execute:
   echo: false
+categories: ["breaking changes", "deprecations"]
 ---
 
 ```{r import-script}
